<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".fragments.SignupScreenFragment">

    <TextView
        android:id="@+id/register_headline_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_screen_headline"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />

    <EditText
        android:id="@+id/name_edit_text"
        style="@style/User_form_style"
        android:inputType="textPersonName"
        android:hint="@string/name_hint_edit_text"
        />
    <EditText
        android:id="@+id/username_edit_text"
        style="@style/User_form_style"
        android:inputType="textNoSuggestions"
        android:hint="@string/username_hint_edit_text"
        />
    <EditText
        android:id="@+id/email_edit_text"
        style="@style/User_form_style"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint_edit_text"/>

    <EditText
        android:id="@+id/first_password_edit_text"
        style="@style/User_form_style"
        android:hint="@string/password1_hint_edit_text"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        style="@style/User_form_style"
        android:hint="@string/password2_hint_edit_text"
        android:inputType="textPassword"
        />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="64dp"
        android:padding="8dp">

        <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/signup_text_button" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/reset_text_button" />

    </LinearLayout>
</LinearLayout>